# trajservice

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  readme.txt
front/: GET_check.html  POST_check.html  curl_test_commands.txt
include/: CFastLog.h  common_stuff.h
src/: CFastLog.cpp  common_stuff.cpp
